<resources>
    <string name="app_name">Pressence</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lengthOfTimeKey">length_of_time</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="error_title">Oops!</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="signup_incomplete_fields_message">Please make sure you enter a username, password, and re-entered password</string>
    <string name="signup_auth_failed_message">Sorry but the email address you entered is incorrect.</string>
    <string name="edit_account_username_empty">Please make sure you enter a valid username</string>
    <string name="edit_account_password_empty">Please make sure you enter a valid password and re-entered password</string>
    <string name="changes_successful">Changes successfully applied</string>
    <string name="password_error_message">Your passwords don\'t match</string>
    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_edit_login_information">EditLoginInformation</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="main_circle_text">Press here to begin</string>
    <string name="completion_text">Hold completed!</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="survey_question1">Please indicate your level of stress, 1 being low and 5 high</string>
    <string name="survey_error_msg">Please provide an answer to the question before submitting.</string>
    <string name="title_activity_account_information">AccountInformationActivity</string>
    <string name="title_activity_edit_account_information">EditAccountInformationActivity</string>

</resources>
