<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/user_auth_background"
                tools:context="com.mykrobb2020.presshere.activities.LoginActivity">

    <ImageView
        android:id="@+id/yellow_circle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_alignTop="@id/title"
        android:src="@drawable/yellow_circle"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            style="@style/AuthEditText"/>

        <EditText
            style="@style/AuthEditText"
            android:inputType="textPassword"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"/>
    </LinearLayout>

    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_below="@id/editTextLayout"
        android:layout_alignParentLeft="true"
        style="@style/AuthButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:paddingTop="@dimen/progress_vertical_padding"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
